music-data-master: fix protection from diamond categories relations