@@ -48,10 +48,10 @@ public class CategoryServiceImpl implements CategoryService {
     private final MasterEntityLookupService lookupService;
 
     public CategoryServiceImpl(
-        CategoryRepository categoryRepository,
-        CategoryBindingRepository categoryBindingRepository,
-        CategoryCategoryRepository categoryCategoryRepository,
-        EntityManager entityManager
+            CategoryRepository categoryRepository,
+            CategoryBindingRepository categoryBindingRepository,
+            CategoryCategoryRepository categoryCategoryRepository,
+            EntityManager entityManager
     ) {
         this.categoryRepository = categoryRepository;
         this.categoryBindingRepository = categoryBindingRepository;
@@ -62,53 +62,53 @@ public class CategoryServiceImpl implements CategoryService {
     @Override
     public Page<CategoryDto> findCategories(String search, Pageable pageable) {
         return categoryRepository.findCategories(search, pageable)
-            .map(this::mapToDto);
+                .map(this::mapToDto);
     }
 
     private CategoryDto mapToDto(Category category) {
         return CategoryDto.builder()
-            .id(category.getId())
-            .name(category.getName())
-            .build();
+                .id(category.getId())
+                .name(category.getName())
+                .build();
     }
 
     @Override
     public List<CategoryWithParentsDto> findCategoriesWithParents(String search) {
         List<Category> categories = categoryRepository.findCategoriesWithParentsEntities(search);
         return categories.stream()
-            .map(this::mapToCategoryWithParents)
-            .toList();
+                .map(this::mapToCategoryWithParents)
+                .toList();
     }
 
     private CategoryWithParentsDto mapToCategoryWithParents(Category category) {
         List<CategoryDto> parents = List.of();
         if (category.getParentRelations() != null) {
             parents = category.getParentRelations().stream()
-                .map(relation -> CategoryDto.builder()
-                    .id(relation.getSourceCategory().getId())
-                    .name(relation.getSourceCategory().getName())
-                    .build())
-                .toList();
+                    .map(relation -> CategoryDto.builder()
+                            .id(relation.getSourceCategory().getId())
+                            .name(relation.getSourceCategory().getName())
+                            .build())
+                    .toList();
         }
-        
+
         return CategoryWithParentsDto.builder()
-            .id(category.getId())
-            .name(category.getName())
-            .parents(parents)
-            .build();
+                .id(category.getId())
+                .name(category.getName())
+                .parents(parents)
+                .build();
     }
 
     @Override
     public CategoryDto getCategory(Long id) {
         Category category = categoryRepository.findById(id)
-            .orElseThrow(() -> new EntityNotFoundException("Category not found with id " + id));
+                .orElseThrow(() -> new EntityNotFoundException("Category not found with id " + id));
         return mapToDto(category);
     }
 
     @Override
     public CategoryWithParentsDto getCategoryWithParents(Long id) {
         Category category = categoryRepository.findById(id)
-            .orElseThrow(() -> new EntityNotFoundException("Category not found with id " + id));
+                .orElseThrow(() -> new EntityNotFoundException("Category not found with id " + id));
         return mapToCategoryWithParents(category);
     }
 
@@ -130,16 +130,16 @@ public class CategoryServiceImpl implements CategoryService {
         if (request.getId() != null) {
             // Update existing category
             category = categoryRepository.findById(request.getId())
-                .orElseThrow(() -> new EntityNotFoundException("Category not found with id: " + request.getId()));
-            
+                    .orElseThrow(() -> new EntityNotFoundException("Category not found with id: " + request.getId()));
+
             category.setName(request.getName());
         } else {
             // Create new category
             category = Category.builder()
-                .name(request.getName())
-                .build();
+                    .name(request.getName())
+                    .build();
         }
-        
+
         Category savedCategory = categoryRepository.save(category);
         return mapToDto(savedCategory);
     }
@@ -151,24 +151,24 @@ public class CategoryServiceImpl implements CategoryService {
         if (request.getId() != null) {
             // Update existing category
             category = categoryRepository.findById(request.getId())
-                .orElseThrow(() -> new EntityNotFoundException("Category not found with id: " + request.getId()));
-            
+                    .orElseThrow(() -> new EntityNotFoundException("Category not found with id: " + request.getId()));
+
             category.setName(request.getName());
         } else {
             // Create new category
             category = Category.builder()
-                .name(request.getName())
-                .build();
+                    .name(request.getName())
+                    .build();
         }
-        
+
         Category savedCategory = categoryRepository.save(category);
-        
+
         // Update parent relationships
         if (request.getId() != null) {
             // Remove existing parent relationships
             categoryCategoryRepository.deleteAll(categoryCategoryRepository.findByTargetCategoryId(savedCategory.getId()));
         }
-        
+
         // Add new parent relationships
         if (request.getParents() != null) {
             for (Long parentId : request.getParents()) {
@@ -176,30 +176,30 @@ public class CategoryServiceImpl implements CategoryService {
                     // Check for cycle before creating relation
                     if (wouldCreateCycle(parentId, savedCategory.getId())) {
                         throw new CycleRelationException(
-                            String.format("Creating relation from category %d to %d would create a cycle", 
-                                parentId, savedCategory.getId()));
+                                String.format("Creating relation from category %d to %d would create a cycle",
+                                        parentId, savedCategory.getId()));
                     }
-                    
+
                     // Check for diamond before creating relation
                     if (wouldCreateDiamond(parentId, savedCategory.getId())) {
                         throw new DiamondRelationException(
-                            String.format("Creating relation from category %d to %d would create a diamond", 
-                                parentId, savedCategory.getId()));
+                                String.format("Creating relation from category %d to %d would create a diamond",
+                                        parentId, savedCategory.getId()));
                     }
-                    
+
                     CategoryCategory relation = CategoryCategory.builder()
-                        .sourceCategoryId(parentId)
-                        .targetCategoryId(savedCategory.getId())
-                        .build();
+                            .sourceCategoryId(parentId)
+                            .targetCategoryId(savedCategory.getId())
+                            .build();
                     categoryCategoryRepository.save(relation);
                 }
             }
         }
-        
+
         // Return the saved category with parent information
         Category categoryWithParents = categoryRepository.findById(savedCategory.getId())
-            .orElseThrow(() -> new EntityNotFoundException("Category not found after save"));
-        
+                .orElseThrow(() -> new EntityNotFoundException("Category not found after save"));
+
         return mapToCategoryWithParents(categoryWithParents);
     }
 
@@ -210,7 +210,7 @@ public class CategoryServiceImpl implements CategoryService {
             // Find all parents and children
             List<Long> parents = categoryCategoryRepository.findParentIds(id);
             List<Long> children = categoryCategoryRepository.findChildIds(id);
-            
+
             // Connect each child to each parent (smart cascade deletion)
             for (Long childId : children) {
                 for (Long parentId : parents) {
@@ -218,26 +218,26 @@ public class CategoryServiceImpl implements CategoryService {
                         // Check for cycle before creating relation
                         if (wouldCreateCycle(parentId, childId)) {
                             throw new CycleRelationException(
-                                String.format("Deleting category %d would create a cycle from %d to %d", 
-                                    id, parentId, childId));
+                                    String.format("Deleting category %d would create a cycle from %d to %d",
+                                            id, parentId, childId));
                         }
-                        
+
                         // Check for diamond before creating relation
                         if (wouldCreateDiamond(parentId, childId)) {
                             throw new DiamondRelationException(
-                                String.format("Deleting category %d would create a diamond relation from %d to %d", 
-                                    id, parentId, childId));
+                                    String.format("Deleting category %d would create a diamond relation from %d to %d",
+                                            id, parentId, childId));
                         }
-                        
+
                         CategoryCategory relation = CategoryCategory.builder()
-                            .sourceCategoryId(parentId)
-                            .targetCategoryId(childId)
-                            .build();
+                                .sourceCategoryId(parentId)
+                                .targetCategoryId(childId)
+                                .build();
                         categoryCategoryRepository.save(relation);
                     }
                 }
             }
-            
+
             categoryRepository.deleteById(id);
             return true;
         }
@@ -259,11 +259,11 @@ public class CategoryServiceImpl implements CategoryService {
     public BoundEntityProjection bindToExisting(DataSource dataSource, Long externalId, EntityBindToExistingRequestDTO request) {
         // Validate that the category exists
         Category category = categoryRepository.findById(request.getMasterId())
-            .orElseThrow(() -> new EntityNotFoundException("Category not found with id: " + request.getMasterId()));
-        
+                .orElseThrow(() -> new EntityNotFoundException("Category not found with id: " + request.getMasterId()));
+
         // Check if binding already exists
         Optional<CategoryBinding> existingBinding = categoryBindingRepository.findByDataSourceAndExternalId(dataSource, externalId);
-        
+
         if (existingBinding.isPresent()) {
             // Update existing binding if needed
             CategoryBinding binding = existingBinding.get();
@@ -274,14 +274,14 @@ public class CategoryServiceImpl implements CategoryService {
         } else {
             // Create new binding
             CategoryBinding binding = CategoryBinding.builder()
-                .dataSource(dataSource)
-                .externalId(externalId)
-                .masterId(category.getId())
-                .build();
-            
+                    .dataSource(dataSource)
+                    .externalId(externalId)
+                    .masterId(category.getId())
+                    .build();
+
             categoryBindingRepository.save(binding);
         }
-        
+
         // Return the binding information
         return categoryBindingRepository.findBoundCategoryForDataSource(dataSource, externalId);
     }
@@ -291,20 +291,20 @@ public class CategoryServiceImpl implements CategoryService {
     public BoundEntityProjection createAndBind(DataSource dataSource, Long externalId, EntityCreateAndBindRequestDTO request) {
         // Check if category with the same name already exists
         categoryRepository.findByName(request.getEntityName())
-            .ifPresent(category -> {
-                throw new IllegalArgumentException(String.format("Category with name %s already exists", category.getName()));
-            });
+                .ifPresent(category -> {
+                    throw new IllegalArgumentException(String.format("Category with name %s already exists", category.getName()));
+                });
 
         // Create new category
         Category category = Category.builder()
-            .name(request.getEntityName())
-            .build();
-        
+                .name(request.getEntityName())
+                .build();
+
         Category savedCategory = categoryRepository.save(category);
-        
+
         // Check if binding already exists
         Optional<CategoryBinding> existingBinding = categoryBindingRepository.findByDataSourceAndExternalId(dataSource, externalId);
-        
+
         if (existingBinding.isPresent()) {
             // Update existing binding
             CategoryBinding binding = existingBinding.get();
@@ -313,14 +313,14 @@ public class CategoryServiceImpl implements CategoryService {
         } else {
             // Create new binding
             CategoryBinding binding = CategoryBinding.builder()
-                .dataSource(dataSource)
-                .externalId(externalId)
-                .masterId(savedCategory.getId())
-                .build();
-            
+                    .dataSource(dataSource)
+                    .externalId(externalId)
+                    .masterId(savedCategory.getId())
+                    .build();
+
             categoryBindingRepository.save(binding);
         }
-        
+
         // Return the binding information
         return categoryBindingRepository.findBoundCategoryForDataSource(dataSource, externalId);
     }
@@ -329,12 +329,12 @@ public class CategoryServiceImpl implements CategoryService {
     @Transactional
     public boolean unbindCategory(DataSource dataSource, Long externalId) {
         Optional<CategoryBinding> binding = categoryBindingRepository.findByDataSourceAndExternalId(dataSource, externalId);
-        
+
         if (binding.isPresent()) {
             categoryBindingRepository.delete(binding.get());
             return true;
         }
-        
+
         return false;
     }
 
@@ -343,30 +343,30 @@ public class CategoryServiceImpl implements CategoryService {
     public CategoryDagDTO getCategoryDag() {
         List<Category> allCategories = categoryRepository.findAll();
         List<CategoryCategory> allRelations = categoryCategoryRepository.findAll();
-        
+
         List<CategoryDagNodeDTO> nodes = allCategories.stream()
-            .map(category -> {
-                boolean isRoot = allRelations.stream()
-                    .noneMatch(rel -> rel.getTargetCategoryId().equals(category.getId()));
-                return CategoryDagNodeDTO.builder()
-                    .id(category.getId())
-                    .name(category.getName())
-                    .isRoot(isRoot)
-                    .build();
-            })
-            .toList();
-        
+                .map(category -> {
+                    boolean isRoot = allRelations.stream()
+                            .noneMatch(rel -> rel.getTargetCategoryId().equals(category.getId()));
+                    return CategoryDagNodeDTO.builder()
+                            .id(category.getId())
+                            .name(category.getName())
+                            .isRoot(isRoot)
+                            .build();
+                })
+                .toList();
+
         List<CategoryDagEdgeDTO> edges = allRelations.stream()
-            .map(relation -> CategoryDagEdgeDTO.builder()
-                .source(relation.getSourceCategoryId())
-                .target(relation.getTargetCategoryId())
-                .build())
-            .toList();
-        
+                .map(relation -> CategoryDagEdgeDTO.builder()
+                        .source(relation.getSourceCategoryId())
+                        .target(relation.getTargetCategoryId())
+                        .build())
+                .toList();
+
         return CategoryDagDTO.builder()
-            .nodes(nodes)
-            .edges(edges)
-            .build();
+                .nodes(nodes)
+                .edges(edges)
+                .build();
     }
 
     @Override
@@ -375,29 +375,29 @@ public class CategoryServiceImpl implements CategoryService {
         // Check if relation already exists
         if (categoryCategoryRepository.existsBySourceCategoryIdAndTargetCategoryId(
                 relation.getSourceId(), relation.getTargetId())) {
-            throw new DataUpdateException("Relation already exists between categories " + 
-                relation.getSourceId() + " and " + relation.getTargetId());
+            throw new DataUpdateException("Relation already exists between categories " +
+                    relation.getSourceId() + " and " + relation.getTargetId());
         }
-        
+
         // Check for cycle
         if (wouldCreateCycle(relation.getSourceId(), relation.getTargetId())) {
             throw new CycleRelationException(
-                String.format("Creating relation from category %d to %d would create a cycle", 
-                    relation.getSourceId(), relation.getTargetId()));
+                    String.format("Creating relation from category %d to %d would create a cycle",
+                            relation.getSourceId(), relation.getTargetId()));
         }
-        
+
         // Check for diamond
         if (wouldCreateDiamond(relation.getSourceId(), relation.getTargetId())) {
             throw new DiamondRelationException(
-                String.format("Creating relation from category %d to %d would create a diamond", 
-                    relation.getSourceId(), relation.getTargetId()));
+                    String.format("Creating relation from category %d to %d would create a diamond",
+                            relation.getSourceId(), relation.getTargetId()));
         }
-        
+
         // Create relation
         CategoryCategory categoryRelation = CategoryCategory.builder()
-            .sourceCategoryId(relation.getSourceId())
-            .targetCategoryId(relation.getTargetId())
-            .build();
+                .sourceCategoryId(relation.getSourceId())
+                .targetCategoryId(relation.getTargetId())
+                .build();
         categoryCategoryRepository.save(categoryRelation);
     }
 
@@ -406,17 +406,17 @@ public class CategoryServiceImpl implements CategoryService {
     public void deleteCategoryRelation(CategoryRelationDTO relation) {
         // Find existing relation
         List<CategoryCategory> relations = categoryCategoryRepository.findAll().stream()
-            .filter(r -> r.getSourceCategoryId().equals(relation.getSourceId()) && 
+                .filter(r -> r.getSourceCategoryId().equals(relation.getSourceId()) &&
                         r.getTargetCategoryId().equals(relation.getTargetId()))
-            .toList();
-        
+                .toList();
+
         if (relations.isEmpty()) {
-            throw new EntityNotFoundException("Relation not found between categories " + 
-                relation.getSourceId() + " and " + relation.getTargetId());
+            throw new EntityNotFoundException("Relation not found between categories " +
+                    relation.getSourceId() + " and " + relation.getTargetId());
         }
-        
+
         // Delete relation
-        categoryCategoryRepository.delete(relations.get(0));
+        categoryCategoryRepository.delete(relations.getFirst());
     }
 
     /**
@@ -432,7 +432,7 @@ public class CategoryServiceImpl implements CategoryService {
      */
     private boolean wouldCreateDiamond(Long parentId, Long childId) {
         // If there's already a path from parent to child, adding direct relation creates diamond
-        return hasPath(parentId, childId);
+        return hasPath(parentId, childId) || hasCommonDescendants(parentId, childId) || hasCommonAncestors(parentId, childId);
     }
 
     /**
@@ -442,7 +442,7 @@ public class CategoryServiceImpl implements CategoryService {
         if (sourceId.equals(targetId)) {
             return true;
         }
-        
+
         Set<Long> visited = new HashSet<>();
         return hasPathRecursive(sourceId, targetId, visited);
     }
@@ -454,16 +454,92 @@ public class CategoryServiceImpl implements CategoryService {
         if (visited.contains(currentId)) {
             return false; // Cycle detected, stop
         }
-        
+
         visited.add(currentId);
-        
+
         List<Long> children = categoryCategoryRepository.findChildIds(currentId);
         for (Long childId : children) {
             if (childId.equals(targetId) || hasPathRecursive(childId, targetId, visited)) {
                 return true;
             }
         }
-        
+
         return false;
+    }
+
+    /**
+     * Check if two categories have common descendants
+     */
+    private boolean hasCommonDescendants(Long parentId, Long childId) {
+        Set<Long> parentDescendants = getAllDescendants(parentId);
+        Set<Long> childDescendants = getAllDescendants(childId);
+
+        // If they have common descendants, creating parent->child relation would create diamond
+        parentDescendants.retainAll(childDescendants);
+        return !parentDescendants.isEmpty();
+    }
+
+    /**
+     * Get all descendants of a category
+     */
+    private Set<Long> getAllDescendants(Long categoryId) {
+        Set<Long> descendants = new HashSet<>();
+        Set<Long> visited = new HashSet<>();
+        collectDescendants(categoryId, descendants, visited);
+        return descendants;
+    }
+
+    /**
+     * Recursively collect all descendants
+     */
+    private void collectDescendants(Long categoryId, Set<Long> descendants, Set<Long> visited) {
+        if (visited.contains(categoryId)) {
+            return; // Cycle protection
+        }
+        visited.add(categoryId);
+
+        List<Long> children = categoryCategoryRepository.findChildIds(categoryId);
+        for (Long childId : children) {
+            descendants.add(childId);
+            collectDescendants(childId, descendants, visited);
+        }
+    }
+
+    /**
+     * Check if two categories have common ancestors
+     */
+    private boolean hasCommonAncestors(Long parentId, Long childId) {
+        Set<Long> parentAncestors = getAllAncestors(parentId);
+        Set<Long> childAncestors = getAllAncestors(childId);
+
+        // If they have common ancestors, creating parent->child relation would create diamond
+        parentAncestors.retainAll(childAncestors);
+        return !parentAncestors.isEmpty();
+    }
+
+    /**
+     * Get all ancestors of a category
+     */
+    private Set<Long> getAllAncestors(Long categoryId) {
+        Set<Long> ancestors = new HashSet<>();
+        Set<Long> visited = new HashSet<>();
+        collectAncestors(categoryId, ancestors, visited);
+        return ancestors;
+    }
+
+    /**
+     * Recursively collect all ancestors
+     */
+    private void collectAncestors(Long categoryId, Set<Long> ancestors, Set<Long> visited) {
+        if (visited.contains(categoryId)) {
+            return; // Cycle protection
+        }
+        visited.add(categoryId);
+
+        List<Long> parents = categoryCategoryRepository.findParentIds(categoryId);
+        for (Long parentId : parents) {
+            ancestors.add(parentId);
+            collectAncestors(parentId, ancestors, visited);
+        }
     }
 }
